# basic-receipt-ocr

./: .gitignore  main.py  ocr.py  pyproject.toml
backend/modules/: app_routes.py
backend/modules/receipts/: receipts_routes.py
backend/modules/receipts/exceptions/: invalid_file_type_exception.py
backend/modules/receipts/parsers/: e_center_receipt_parser.py  tedi_receipt_parser.py
backend/modules/receipts/parsers/utils/: fuzzy_match.py
backend/modules/shared/exceptions/: bad_request_exception.py
frontend/: .stylelintrc.json  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  router.tsx
frontend/src/pages/home/: index.tsx
modules/receipts/: receipts_routes.py
modules/receipts/parsers/: receipt_parser.py
modules/receipts/parsers/exceptions/: parser_not_found_exception.py
modules/receipts/parsers/types/: parsed_receipt_type.py
modules/shared/exceptions/: base_http_exception.py
receipt_parsers/: e_center_receipt_parser.py  receipt_parser.py  tedi_receipt_parser.py
receipt_parsers/exceptions/: parser_not_found_exception.py
receipt_parsers/types/: parsed_receipt_type.py
receipt_parsers/utils/: chunks.py
